# E1epack

./: .bazelrc  .gitignore  CLAUDE.md  MODULE.bazel  README.md  maven_install.json  opencode.jsonc  test
.claude/: settings.json
.claude/commands/: commit.md  release.md
.github/ISSUE_TEMPLATE/: bug_report_cn.yml  bug_report_en.yml  feature_request_cn.yml  feature_request_en.yml
.github/agents/: code-reviewer.agent.md  mcfunction-commenter.agent.md  mcfunction-formatter.agent.md
.github/prompts/: commit.prompt.md  release.prompt.md  translate.prompt.md
.github/scripts/: README.md  check.py  translate.py
Easier-MC/: BUILD.bazel  NEWS.md  README.md
Lucky-Block-Island/: README.md
auto-smelt/: BUILD.bazel  NEWS.md  README.md
auto-smelt/data/auto_smelt/function/: start.mcfunction
auto-smelt/data/minecraft/tags/function/: load.json
datapack-function-library/: README-en_us.md
game/: BUILD.bazel
game/1.21.10/: maven_install_fabric.json
game/1.21.11/: maven_install_fabric.json
game/1.21.9/: maven_install_fabric.json
game/26.1.1/: maven_install_fabric.json
game/26.2/: maven_install_fabric.json
highly-toxic-water/: README.md
no-entity-lag/: BUILD.bazel  NEWS.md  README.md
repo/: minecraft_jar.bzl
rule/: BUILD.bazel  command_replacer.bzl  command_replacer.py  datapack.bzl  extract_jar.bzl  gamerule_mapping.json  gamerule_replacer.bzl  gamerule_replacer.py  generate_test_runner.py  merge_json.bzl  merge_mapping.bzl  merge_tags.bzl  merge_tags.py  minecraft_versions.bzl  modrinth.bzl  process_json.bzl  process_mcfunction.bzl  remap_jar.bzl  rename_files.bzl  test_system.bzl  time_query_mapping.json  upload_modrinth.bzl  validation.bzl  version.bzl
rule/dev_launch_wrapper/: DevLaunchWrapper.java
rule/mapping_merger/: BUILD.bazel  MappingMerger.java
rule/mcfunction_processor/: BUILD.bazel  McfunctionProcessor.java  gamerule_mapping.json
rule/patch_funcman/: PatchFuncMan.java
rule/test_runner/: TestRunner.java
rule/tiny_remapper_worker/: BUILD.bazel  JarInJarRemover.java  MixinRefmapInliner.java  RefmapLoader.java  TinyRemapperWorker.java
rule/tools/dev_launch_wrapper/: DevLaunchWrapper.java
rule/tools/json_compressor/: BUILD.bazel
rule/tools/json_merger/: BUILD.bazel
rule/tools/mcfunction_processor/: BUILD.bazel
rule/tools/patch_funcman/: BUILD.bazel  PatchFuncMan.java
rule/tools/test_runner/: BUILD.bazel  TestRunner.java  run_test.sh
rule/tools/worker_api/: WorkRequest.java  Worker.java
scripts/: bisect_tests.py  repin_fabric.sh  run_test.sh  test_loop.sh
subprojects/datapack-function-library/: BUILD.bazel  README-en_us.md  README.md
subprojects/datapack-function-library/data/dfl-test/function/: test_runner.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.1/: version-1-1.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.13-1.20.1/: version-1-13-1-20-1.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.13-1.21.10/: always-sunny.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.17-1.21.10/: disable-special-damage.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.20.2-26.2/: create-teams.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.20.3-26.2/: datapack-banner-working.mcfunction  load-function-loaded.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/1.21.11-26.2/: always-sunny.mcfunction  disable-special-damage.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/26.2/: version-26-2.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/common/: count-entity.mcfunction  datapack-banner-working.mcfunction  fail.mcfunction  get-day-time.mcfunction  get-entity-count.mcfunction  get-entity-density.mcfunction  get-game-day.mcfunction  get-game-time.mcfunction  get-item-count.mcfunction  get-player-count.mcfunction  load-function-loaded.mcfunction  non-player-entities.mcfunction  print-error.mcfunction
subprojects/datapack-function-library/data/dfl-test/function/common/helper/: summon_armor_stand.mcfunction
subprojects/datapack-function-library/data/dfl/function/: load.mcfunction
subprojects/datapack-function-library/data/dfl/function/child/: smelt.mcfunction
subprojects/datapack-function-library/data/dfl/function/lib/: count_items.mcfunction  force_death_drops.mcfunction  get_day_time.mcfunction  get_game_day.mcfunction  get_game_time.mcfunction
subprojects/datapack-function-library/data/dfl/function/private/: datapack_banner.mcfunction
subprojects/datapack-function-library/data/dfl/function/start/: disable_special_damage.mcfunction  set_world_spawn.mcfunction
subprojects/datapack-function-library/data/dfl/function/test/: fail.mcfunction  pass.mcfunction
subprojects/datapack-function-library/data/dfl/function/tick/: always_sunny.mcfunction  change_block.mcfunction  clear_and_execute_multiple.mcfunction  clear_and_execute_single.mcfunction  coal_smelt.mcfunction  convert_items_to_xp.mcfunction  create_rescue_platform.mcfunction  maintain_item_count.mcfunction  mith.mcfunction  smelt_item.mcfunction  teleport_request.mcfunction
subprojects/spawn-chunk-fix/: BUILD.bazel
subprojects/spawn-chunk-fix/src/main/java/io/github/touchcontroller/spawnchunkfix/mixin/: MinecraftServerMixin.java
subprojects/spawn-chunk-fix/src/main/resources/: fabric.mod.json  spawn-chunk-fix.mixins.json
subprojects/spawn-chunk-fix/src/main/v21/java/io/github/touchcontroller/spawnchunkfix/mixin/: MinecraftServerMixin.java
subprojects/unif-logger/: BUILD.bazel  README.md  pack.mcmeta
subprojects/unif-logger/data/unif.logger/function/private/cache/: message_process.mcfunction
subprojects/unif-logger/data/unif.logger/function/private/logs/read/: _reader.mcfunction  read_all.mcfunction  read_debug.mcfunction  read_error.mcfunction  read_info.mcfunction  read_warn.mcfunction
subprojects/unif-logger/data/unif.logger/function/private/test/: all_level.mcfunction
template/: BUILD.bazel  pack.mcmeta  test_runner.mcf
(+127 files in other folders)
