"""Minecraft 数据包构建系统的 Bazel 模块配置。

此模块定义了用于构建 Minecraft 数据包的 Bazel 模块配置。
主要功能包括：
- 配置构建系统的依赖项（Skylib、Pkg、Java 等）
- 管理 Maven 依赖项（Jackson、Enjoy 模板引擎等）
- 配置 Minecraft JAR 文件下载
- 集成第三方库（UniF-Logger）

提供完整的构建环境配置，支持数据包的编译、打包和部署。
"""

module(
    name = "datapack",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.3.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-core:2.9.6",
        "com.fasterxml.jackson.core:jackson-annotations:2.9.6",
        "com.fasterxml.jackson.core:jackson-databind:2.9.6",
        "de.swiesend:secret-service:2.0.1-alpha",
        "ch.qos.logback:logback-classic:1.5.18",
        "com.github.mizosoft.methanol:methanol:1.8.3",
        "net.java.dev.jna:jna:5.18.0",
        "net.java.dev.jna:jna-platform:5.18.0",
        "org.ow2.asm:asm:9.7",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

minecraft = use_extension("//repo:minecraft_jar.bzl", "minecraft")

[
    minecraft.minecraft_jar(
        type = "server",
        version = v,
    )
    for v in [
        "26.2",
        "26.1.2",
        "26.1.1",
        "26.1",
        "1.21.11",
        "1.21.10",
        "1.21.9",
        "1.21.8",
        "1.21.7",
        "1.21.6",
        "1.21.5",
        "1.21.4",
        "1.21.3",
        "1.21.2",
        "1.21.1",
        "1.21",
        "1.20.6",
        "1.20.5",
        "1.20.4",
        "1.20.3",
        "1.20.2",
        "1.20.1",
        "1.20",
        "1.19.4",
        "1.19.3",
        "1.19.2",
        "1.19.1",
        "1.19",
        "1.18.2",
        "1.18.1",
        "1.18",
        "1.17.1",
        "1.17",
        "1.16.5",
        "1.16.4",
        "1.16.3",
        "1.16.2",
        "1.16.1",
        "1.16",
        "1.15.2",
        "1.15.1",
        "1.15",
        "1.14.4",
        "1.14.3",
        "1.14.2",
        "1.14.1",
        "1.14",
        "1.13.2",
        "1.13.1",
        "1.13",
    ]
]

use_repo(minecraft, "minecraft")
