load("@rules_java//java:defs.bzl", "java_import")
load("//rule:extract_jar.bzl", "extract_jar")

extract_jar(
    name = "server_file",
    entry_path = "META-INF/versions/26.2/server-26.2.jar",
    filename = "_minecraft/server.jar",
    input = "@minecraft//:26.2_server",
)

java_import(
    name = "server",
    jars = [":server_file"],
    visibility = ["//visibility:public"],
)

alias(
    name = "ops_json",
    actual = "ops.json",
    visibility = ["//visibility:public"],
)
