load("@rules_java//java:defs.bzl", "java_import")
load("//rule:extract_jar.bzl", "extract_jar")
load("//rule:minecraft_versions.bzl", "ALL_MINECRAFT_VERSIONS")

# Versions with explicit multi-release JAR extraction
_EXPLICIT_VERSIONS = [
    "1.21.10", "1.21.11",
    "26.1", "26.1.1", "26.1.2", "26.2",
]

[extract_jar(
    name = "server_file_" + v.replace(".", "_"),
    entry_path = "META-INF/versions/%s/server-%s.jar" % (v, v),
    filename = "_minecraft/server_%s.jar" % v.replace(".", "_"),
    input = "@minecraft//:%s_server" % v,
) for v in _EXPLICIT_VERSIONS]

[java_import(
    name = "server_" + v.replace(".", "_"),
    jars = [":server_file_" + v.replace(".", "_")],
    visibility = ["//visibility:public"],
) for v in _EXPLICIT_VERSIONS]

# All other versions redirect to 26.2
[
    alias(
        name = "server_" + v.replace(".", "_"),
        actual = ":server_26_2",
        visibility = ["//visibility:public"],
    )
    for v in ALL_MINECRAFT_VERSIONS
    if v not in _EXPLICIT_VERSIONS
]

alias(
    name = "ops_json",
    actual = "ops.json",
    visibility = ["//visibility:public"],
)
