load("@rules_java//java:defs.bzl", "java_binary")

exports_files(["gamerule_mapping.json"])

java_binary(
    name = "mcfunction_processor",
    srcs = ["McfunctionProcessor.java"],
    main_class = "McfunctionProcessor",
    visibility = ["//visibility:public"],
    deps = ["//rule/worker_api"],
)
