load("@//rule:datapack.bzl", "complete_datapack_config", "minecraft_versions_range")

pack_version = "4.0.1"

# 主要的数据包配置，目标名称为包名称
complete_datapack_config(
    game_versions = minecraft_versions_range("1.13"),
    modrinth_project_id = "xfcXTP3W",
    pack_id = "dfl",
    pack_version = pack_version,
    visibility = ["//visibility:public"],
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
    ],
)

# 跨数据包函数调用需要使用命名空间目标，而非完整 zip
# complete_datapack_config 已自动生成 :dfl 和 :dfl_legacy
# 作为仅含命名空间内容的 pkg_filegroup，其他包通过 deps 引用它们
