load("@//rule:datapack.bzl", "complete_datapack_config")
load("@//rule:version.bzl", "minecraft_versions_range")

pack_version = "4.0.1"

# 主要的数据包配置，目标名称为包名称
complete_datapack_config(
    game_versions = minecraft_versions_range("1.13"),
    modrinth_project_id = "xfcXTP3W",
    pack_id = "dfl",
    pack_version = pack_version,
    visibility = ["//visibility:public"],
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
    ],
)

# complete_datapack_config 已自动生成 :dfl 和 :dfl_sN 段目标
# 其他包通过 deps 引用 :dfl（默认最新段）或 :dfl_sN（指定段）
